feat: translate field file, add app game, create tables, and beta local game
- Translate the file input field with dynamic labels and translations.
- Add the app game component with enhanced functionality.
- Create database tables for game, chat, and friends modules.
- Implement a beta version of the local game feature.

--- a/client-pong/src/assets/translate/locales/es/translation.json
+++ b/client-pong/src/assets/translate/locales/es/translation.json
@@ -1,14 +1,19 @@
 {
   "app_title": "Juego Pong",
+  "start_match": "Iniciar Partida Local Casual",
+  "back_to_home": "Volver a la página de inicio",
   "email_label": "Correo electrónico",
   "email_placeholder": "Ingrese su correo electrónico",
   "password_label": "Contraseña",
   "password_placeholder": "Ingrese su contraseña",
+  "error_valid_email": "Por favor introduce un correo electrónico válido",
+  "success_user_registered": "¡Usuario registrado con éxito!",
   "2fa_code_label": "Código de Autenticación de Dos Factores",
   "code_2fa_placeholder": "Ingrese el código enviado a su correo",
   "login": "Iniciar sesión",
   "register": "Registrar",
   "validate_code": "Validar Código",
+  "choose_file": "Elegir Archivo",
   "password_requirements": {
     "minLength": "Debe tener al menos 12 caracteres",
     "uppercase": "Debe incluir al menos una letra mayúscula",
