--- a/client-pong/src/assets/translate/locales/pt_BR/translation.json
+++ b/client-pong/src/assets/translate/locales/pt_BR/translation.json
@@ -1,14 +1,19 @@
 {
   "app_title": "Jogo Pong",
+  "start_match": "Iniciar Partida Local Casual",
+  "back_to_home": "Voltar à Página Inicial",
   "email_label": "E-mail",
   "email_placeholder": "Digite seu e-mail",
   "password_label": "Senha",
   "password_placeholder": "Digite sua senha",
+  "error_valid_email": "Por favor, insira um email válido",
+  "success_user_registered": "Usuário cadastrado com sucesso!",
   "2fa_code_label": "Código de Autenticação de Dois Fatores",
   "code_2fa_placeholder": "Digite o código enviado ao e-mail",
   "login": "Entrar",
   "register": "Registrar",
   "validate_code": "Validar Código",
+  "choose_file": "Escolher Arquivo",
   "password_requirements": {
     "minLength": "Deve ter pelo menos 12 caracteres",
     "uppercase": "Deve conter pelo menos uma letra maiúscula",
