--- a/client-pong/src/assets/translate/locales/en/translation.json
+++ b/client-pong/src/assets/translate/locales/en/translation.json
@@ -1,14 +1,23 @@
 {
   "app_title": "Pong Game",
+  "start_match": "Start Local Casual Match",
+  "back_to_home": "Return to Home Page",
   "email_label": "Email",
   "email_placeholder": "Enter your email",
   "password_label": "Password",
   "password_placeholder": "Enter your password",
+  "error_valid_email": "Please enter a valid email",
+  "success_user_registered": "User successfully registered!",
   "2fa_code_label": "Two-Factor Authentication Code",
   "code_2fa_placeholder": "Enter the code sent to your email",
   "login": "Login",
   "register": "Register",
   "validate_code": "Validate Code",
+  "choose_file": "Choose File",
+
+  "file_selected": "Arquivo Selecionado",
+  "selected_file": "Arquivo",
+  
   "password_requirements": {
     "minLength": "Must be at least 12 characters long",
     "uppercase": "Must include at least one uppercase letter",
