--- a/client-pong/src/assets/translate/locales/pt_BR/translation.json
+++ b/client-pong/src/assets/translate/locales/pt_BR/translation.json
@@ -4,6 +4,8 @@
   "back_to_home": "Voltar à Página Inicial",
   "email_label": "E-mail",
   "email_placeholder": "Digite seu e-mail",
+  "display_name_label": "Nome de Exibição",
+  "display_name_placeholder": "Digite seu nome de exibição",
   "password_label": "Senha",
   "password_placeholder": "Digite sua senha",
   "error_valid_email": "Por favor, insira um email válido",
@@ -34,6 +36,9 @@
   "error_invalid_email": "Por favor, insira um endereço de e-mail válido.",
   "error_password_requirements": "Por favor, preencha os requisitos de senha antes de continuar.",
   "error_unknown": "Ocorreu um erro desconhecido.",
+  "error_display_name_already_exists": "Este nome de exibição já está em uso.",
+  "error_valid_display_name": "Por favor, insira um nome de exibição válido.",
+  "error_email_already_exists": "Já existe um usuário com este email.",
   "navbar": {
     "app_title": "Jogo Pong",
     "chat": "Chat",
