feat: rearranging menu

--- a/client-pong/src/assets/translate/locales/en/translation.json
+++ b/client-pong/src/assets/translate/locales/en/translation.json
@@ -48,8 +48,7 @@
     "chat": "Chat/Friends",
     "tournaments": "Tournaments",
     "profile": "Profile",
-    "history": "History",
-    "friends": "Friends",
+    "ranking": "Ranking",
     "logout": "Logout",
     "greeting": "Hello"
   }
