--- a/client-pong/src/assets/translate/locales/pt_BR/translation.json
+++ b/client-pong/src/assets/translate/locales/pt_BR/translation.json
@@ -44,8 +44,7 @@
     "chat": "Chat/Amigos",
     "tournaments": "Torneios",
     "profile": "Perfil",
-    "history": "Histórico",
-    "friends": "Amigos",
+    "ranking": "Classificação",
     "logout": "Sair",
     "greeting": "Olá"
   }
