translate page: chat/amigos

--- a/client-pong/src/assets/translate/locales/en/translation.json
+++ b/client-pong/src/assets/translate/locales/en/translation.json
@@ -51,5 +51,39 @@
     "ranking": "Ranking",
     "logout": "Logout",
     "greeting": "Hello"
+  },
+  "chat": {
+    "global_chat": "Global Chat",
+    "friends": "Friends",
+    "pending_requests": "Pending Requests",
+    "blocked_users": "Blocked Users",
+    "non_friends": "Non-Friends",
+    "add_friend": "Add Friend",
+    "block_user": "Block User",
+    "unblock_user": "Unblock User",
+    "accept_request": "Accept Request",
+    "reject_request": "Reject Request",
+    "remove_friend": "Remove Friend",
+    "challenge_user": "Challenge User",
+    "open_chat": "Open Chat",
+    "close_chat": "Close Chat",
+    "no_messages": "No messages yet",
+    "type_message": "Type a message...",
+    "message_placeholder": "Type your message",
+    "send": "Send",
+    "offline": "offline",
+    "online": "online",
+    "players_list_title": "Player List",
+    "no_friends": "No friends added.",
+    "no_pending_requests": "No pending requests.",
+    "no_blocked_users": "No blocked users.",
+    "no_non_friends": "No available users to add.",
+    "blocked": "Blocked",
+    "request_sent": "Request sent",
+    "view_profile": "User Profile",
+    "block": "Block friend",
+    "cancel_request": "Cancel request",
+    "open_private_chat": "Open private chat",
+    "challenge": "Challenge friend"
   }
 }
