--- a/client-pong/src/assets/translate/locales/es/translation.json
+++ b/client-pong/src/assets/translate/locales/es/translation.json
@@ -47,5 +47,39 @@
     "ranking": "Rangotabelo",
     "logout": "Cerrar sesión",
     "greeting": "Hola"    
+  },
+  "chat": {
+    "global_chat": "Chat Global",
+    "friends": "Amigos",
+    "pending_requests": "Solicitudes Pendientes",
+    "blocked_users": "Usuarios Bloqueados",
+    "non_friends": "No Amigos",
+    "add_friend": "Agregar Amigo",
+    "block_user": "Bloquear Usuario",
+    "unblock_user": "Desbloquear Usuario",
+    "accept_request": "Aceptar Solicitud",
+    "reject_request": "Rechazar Solicitud",
+    "remove_friend": "Eliminar Amigo",
+    "challenge_user": "Desafiar Usuario",
+    "open_chat": "Abrir Chat",
+    "close_chat": "Cerrar Chat",
+    "no_messages": "Aún no hay mensajes",
+    "type_message": "Escribe un mensaje...",
+    "message_placeholder": "Escribe tu mensaje",
+    "send": "Enviar",
+    "offline": "offline",
+    "online": "online",
+    "players_list_title": "Lista de Jugadores",
+    "no_friends": "No hay amigos agregados.",
+    "no_pending_requests": "No hay solicitudes pendientes.",
+    "no_blocked_users": "No hay usuarios bloqueados.",
+    "no_non_friends": "No hay usuarios disponibles para agregar.",
+    "blocked": "Bloqueado",
+    "request_sent": "Solicitud enviada",
+    "view_profile": "Perfil del usuario",
+    "block": "Bloquear amigo",
+    "cancel_request": "Cancelar solicitud",
+    "open_private_chat": "Abrir chat privado",
+    "challenge": "Desafiar amigo"
   }
 }
