--- a/client-pong/src/assets/translate/locales/pt_BR/translation.json
+++ b/client-pong/src/assets/translate/locales/pt_BR/translation.json
@@ -47,5 +47,39 @@
     "ranking": "Classificação",
     "logout": "Sair",
     "greeting": "Olá"
+  },
+  "chat": {
+    "global_chat": "Chat Global",
+    "friends": "Amigos",
+    "pending_requests": "Solicitações Pendentes",
+    "blocked_users": "Usuários Bloqueados",
+    "non_friends": "Não Amigos",
+    "add_friend": "Adicionar Amigo",
+    "block_user": "Bloquear Usuário",
+    "unblock_user": "Desbloquear Usuário",
+    "accept_request": "Aceitar Solicitação",
+    "reject_request": "Recusar Solicitação",
+    "remove_friend": "Remover Amigo",
+    "challenge_user": "Desafiar Usuário",
+    "open_chat": "Abrir Chat",
+    "close_chat": "Fechar Chat",
+    "no_messages": "Nenhuma mensagem ainda",
+    "type_message": "Digite uma mensagem...",
+    "message_placeholder": "Digite sua mensagem",
+    "send": "Enviar",
+    "offline": "offline",
+    "online": "online",
+    "players_list_title": "Lista de Jogadores",
+    "no_friends": "Sem amigos adicionados.",
+    "no_pending_requests": "Sem solicitações pendentes.",
+    "no_blocked_users": "Nenhum usuário bloqueado.",
+    "no_non_friends": "Não há usuários disponíveis para adicionar.",
+    "blocked": "Bloqueado",
+    "request_sent": "Solicitação enviada",
+    "view_profile": "Perfil do usuário",
+    "block": "Bloquear amigo",
+    "cancel_request": "Cancelar requisição",
+    "open_private_chat": "Abrir conversa privada",
+    "challenge": "Desafiar amigo"
   }
 }
