--- a/client-pong/src/assets/translate/locales/es/translation.json
+++ b/client-pong/src/assets/translate/locales/es/translation.json
@@ -94,5 +94,8 @@
     "side_left": "Izquierda",
     "side_right": "Derecha",
     "you": "Tú"
+  },
+  "homepage": {
+    "welcome_message": "Bienvenido al juego"
   }
 }
