--- a/client-pong/src/assets/translate/locales/es/translation.json
+++ b/client-pong/src/assets/translate/locales/es/translation.json
@@ -189,5 +189,13 @@
     "profile_update_success": "Actualización de perfil exitosa",
     "display_name_required": "El nombre para mostrar es obligatorio",
     "display_name_exists": "Este nombre de usuario ya existe"
+  },
+  "ranking": {
+    "most_tournaments_won": "Más Torneos Ganados",
+    "most_victories": "Más Victorias",
+    "tournament": "torneos",
+    "victory": "victorias",
+    "defeat": "derrotas",
+    "no_data": "No hay datos disponibles."
   }
 }
