--- a/client-pong/src/assets/translate/locales/pt_BR/translation.json
+++ b/client-pong/src/assets/translate/locales/pt_BR/translation.json
@@ -197,5 +197,22 @@
     "victory": "vitórias",
     "defeat": "derrotas",
     "no_data": "Nenhum dado disponível."
+  },
+  "notification": {
+      "friend_request_received": "Você recebeu uma solicitação de amizade.",
+      "friend_request_sent": "Você enviou uma solicitação de amizade.",
+      "blocked_you": "Você foi bloqueado.",
+      "blocked_user": "Você bloqueou o usuário.",
+      "unblocked_you": "Você foi desbloqueado.",
+      "unblocked_user": "Você desbloqueou o usuário.",
+      "friend_request_accepted_receiver": "Sua solicitação de amizade foi aceita.",
+      "friend_request_accepted_sender": "Você aceitou a solicitação de amizade.",
+      "friend_request_rejected_receiver": "Sua solicitação de amizade foi rejeitada.",
+      "friend_request_rejected_sender": "Você rejeitou a solicitação de amizade.",
+      "friend_removed": "Você foi removido da lista de amigos.",
+      "friend_removed_by_you": "Você removeu um amigo da sua lista.",
+      "challenge_error": "Erro ao registrar o desafio. Tente novamente.",
+      "challenge_sent": "Você enviou um desafio para uma partida!",
+      "challenge_received": "Você foi desafiado para uma partida!"
   }
 }
