translate: toast accept/decline match

--- a/client-pong/src/assets/translate/locales/en/translation.json
+++ b/client-pong/src/assets/translate/locales/en/translation.json
@@ -221,6 +221,8 @@
   },
   "toast": {
     "challenge_declined": "You declined the challenge.",
-    "challenge_decline_error": "Error declining the challenge."
+    "challenge_decline_error": "Error declining the challenge.",
+    "accept": "Accept",
+    "decline": "Decline"
   }
 }
