--- a/client-pong/src/assets/translate/locales/pt_BR/translation.json
+++ b/client-pong/src/assets/translate/locales/pt_BR/translation.json
@@ -216,6 +216,8 @@
   },
   "toast": {
       "challenge_declined": "Você recusou o desafio.",
-      "challenge_decline_error": "Erro ao recusar o desafio."
+      "challenge_decline_error": "Erro ao recusar o desafio.",
+      "accept": "Aceitar",
+      "decline": "Recusar"
   }
 }
