--- a/client-pong/src/assets/translate/locales/en/translation.json
+++ b/client-pong/src/assets/translate/locales/en/translation.json
@@ -223,6 +223,9 @@
     "challenge_declined": "You declined the challenge.",
     "challenge_decline_error": "Error declining the challenge.",
     "accept": "Accept",
-    "decline": "Decline"
+    "decline": "Decline",
+    "new_tournament": "New tournament created: ",
+    "tournament_updated": "Tournament updated: {{name}} now has {{totalParticipants}} participants.",
+    "tournament_started": "Tournament '{{name}}' has started!"
   }
 }
