--- a/client-pong/src/assets/translate/locales/pt_BR/translation.json
+++ b/client-pong/src/assets/translate/locales/pt_BR/translation.json
@@ -221,6 +221,7 @@
       "decline": "Recusar",
       "new_tournament": "Novo torneio criado: ",
       "tournament_updated": "Torneio atualizado: {{name}} agora tem {{totalParticipants}} participantes.",
-      "tournament_started": "O torneio '{{name}}' foi iniciado!"
+      "tournament_started": "O torneio '{{name}}' foi iniciado!",
+      "not_in_next_match": "Você não está na próxima partida."
   }
 }
